<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>esthesis</groupId>
  <artifactId>esthesis-server</artifactId>
  <version>2.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>esthesis IoT</name>
  <description>esthesis IoT platform</description>
  <developers>
    <developer>
      <name>European Dynamics SA</name>
      <email>esthesis@eurodyn.com</email>
      <organization>European Dynamics SA</organization>
      <organizationUrl>http://www.eurodyn.com</organizationUrl>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git@github.com:esthesis-iot/esthesis-platform.git</connection>
    <url>https://github.com/esthesis-iot</url>
    <tag>HEAD</tag>
  </scm>

  <!--  <pluginRepositories>-->
  <!--    &lt;!&ndash; Attach artifacts to GitHub releases &ndash;&gt;-->
  <!--    <pluginRepository>-->
  <!--      <snapshots>-->
  <!--        <enabled>false</enabled>-->
  <!--      </snapshots>-->
  <!--      <id>bintray-cy6ergn0m-maven</id>-->
  <!--      <name>bintray-plugins</name>-->
  <!--      <url>http://dl.bintray.com/cy6ergn0m/maven</url>-->
  <!--    </pluginRepository>-->
  <!--  </pluginRepositories>-->

  <properties>
    <spring.boot.version>2.4.1</spring.boot.version>
    <qlack.version>3.5.2</qlack.version>

    <awaitility.version>4.0.3</awaitility.version>
    <camunda.spring-boot.version>7.14.0</camunda.spring-boot.version>
    <classgraph.version>4.8.22</classgraph.version>
    <commons-codec.version>1.12</commons-codec.version>
    <commons-collections4.version>4.2</commons-collections4.version>
    <commons-exec>1.3</commons-exec>
    <commons-io.version>2.6</commons-io.version>
    <commons-lang3.version>3.8.1</commons-lang3.version>
    <git-commit-id-plugin.version>3.0.1</git-commit-id-plugin.version>
    <github-release-plugin.version>1.4.0</github-release-plugin.version>
    <hibernate-enhance-maven-plugin.version>5.3.7.Final</hibernate-enhance-maven-plugin.version> <!-- Keep this inline to Spring's packageVersion -->
    <jjwt.version>0.9.0</jjwt.version>
    <jna-platform.version>5.3.1</jna-platform.version>
    <jna.version>5.3.1</jna.version>
    <jrebel-maven-plugin.version>1.1.9</jrebel-maven-plugin.version>
    <jsondb-core.version>1.0.115-j11</jsondb-core.version>
    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
    <lombok.version>1.18.18</lombok.version>
    <mapstruct.version>1.4.1.Final</mapstruct.version>
    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
    <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
    <moquette-broker.version>0.12.1</moquette-broker.version>
    <mysql-connector-java.version>8.0.13</mysql-connector-java.version>
    <org.eclipse.paho.client.mqttv3.version>1.2.2</org.eclipse.paho.client.mqttv3.version>
    <oshi-core.version>3.13.3</oshi-core.version>
    <querydsl.version>4.4.0</querydsl.version>
    <slugify.version>2.2</slugify.version>
    <spring-content-fs-boot-starter.version>1.2.0</spring-content-fs-boot-starter.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Spring Boot -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Configuration for the resources plugin-->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven-resources-plugin.version}</version>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <!-- JRebel configuration -->
        <plugin>
          <groupId>org.zeroturnaround</groupId>
          <artifactId>jrebel-maven-plugin</artifactId>
          <version>${jrebel-maven-plugin.version}</version>
          <configuration>
            <alwaysGenerate>true</alwaysGenerate>
          </configuration>
          <executions>
            <execution>
              <id>generate-rebel-xml</id>
              <phase>process-resources</phase>
              <goals>
                <goal>generate</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <!-- Compiler configuration -->
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <showDeprecation>true</showDeprecation>
            <source>15</source>
            <target>15</target>
            <release>15</release>
            <encoding>UTF-8</encoding>
            <showDeprecation>true</showDeprecation>
            <useIncrementalCompilation>false</useIncrementalCompilation>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <modules>
    <module>esthesis-server-common</module>
    <module>esthesis-server-impl</module>
  </modules>

</project>
